--- a/src/index.css
+++ b/src/index.css
@@ -1,129 +1,6 @@
-/* body {
-  background-color: #e4e4e4;
-}
 
-div {
-  box-sizing: border-box;
-}
-
-.quiz {
-  width: 975px;
-  margin: 0 auto;
-  margin-top: 100px;
-}
-
-.question {
-  background-color: #0094da;
-  color: white;
-  padding: 10px;
-  min-height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-}
-
-.results {
-  background-color: #fff;
-  height: 300px;
-  text-align: center;
-}
-
-.congratulations {
-  background-color: #0094da;
-  padding: 20px;
-  font-size: 36px;
-  color: #fff;
-}
-
-.results-info {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  font-size: 18px;
-}
-
-.answer {
-  width: 48%;
-  background: #fff;
-  border: 2px solid #0094da;
-  min-height: 70px;
-  cursor: pointer;
-  margin-bottom: 30px;
-  display: flex;
-}
-
-.answers {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 50px;
-}
-
-.answer-letter {
-  font-size: 30px;
-  background-color: #0084da;
-  color: #fff;
-  width: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.answer-text {
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-}
-
-.correct-answer {
-  border: 2px solid #1ea55b;
-}
-
-.correct-answer .answer-letter {
-  background: #1ea55b;
-}
-
-.wrong-answer {
-  border: 2px solid #dc0a0a;
-}
-
-.wrong-answer .answer-letter {
-  background: #dc0a0a;
-}
-
-.next-button {
-  margin: 0 auto;
-  color: #fff;
-  background: #0b0e21;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 600;
-  padding: 14px 75px;
-  text-transform: uppercase;
-  cursor: pointer;
-  text-align: center;
-}
-
-.score {
-  background: #fff;
-  color: 000;
-  font-size: 18px;
-  width: 200px;
-  margin: 0 auto;
-  font-weight: 600;
-  height: 40px;
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.disabled-answer {
-  pointer-events: none;
-} */
 body {
-  background-color: #e4e4e4;
+  background-color: #fefdfd;
 }
 
 div {
@@ -137,7 +14,7 @@ div {
 }
 
 .question {
-  background-color: #0094da;
+  background-color: #393d3e;
   color: white;
   padding: 10px;
   min-height: 60px;
@@ -145,31 +22,35 @@ div {
   align-items: center;
   justify-content: center;
   font-size: 24px;
+  border-radius: 50%;
 }
 
 .results {
   background-color: #fff;
   height: 300px;
   text-align: center;
+  
 }
 
 .congratulations {
-  background-color: #0094da;
+  background-color: #52ab5d;
   padding: 20px;
   font-size: 36px;
   color: #fff;
+  border-radius: 50%;
 }
 
 .results-info {
   margin-top: 40px;
   margin-bottom: 40px;
   font-size: 18px;
+  
 }
 
 .answer {
   width: 48%;
   background: #fff;
-  border: 2px solid #0094da;
+  /* //border: 2px solid #0094da; */
   border-radius: 10px;
   min-height: 70px;
   cursor: pointer;
@@ -192,6 +73,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 50%;
 }
 
 .answer-text {
@@ -199,11 +81,12 @@ div {
   display: flex;
   align-items: center;
   margin-left: 20px;
+  
 }
 
 .correct-answer {
-  border: 2px solid #1ea55b;
-  border-radius: 10px;
+  /* border: 2px solid #1ea55b; */
+  border-radius: 50%;
 }
 
 .correct-answer .answer-letter {
@@ -211,8 +94,8 @@ div {
 }
 
 .wrong-answer {
-  border: 2px solid #dc0a0a;
-  border-radius: 10px;
+  /* border: 2px solid #dc0a0a; */
+  border-radius: 50%;
 }
 
 .wrong-answer .answer-letter {
@@ -222,18 +105,33 @@ div {
 .next-button {
   margin: 0 auto;
   color: #fff;
-  background: #0b0e21;
+  background: #b0b3c5;
   width: 300px;
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 700;
   padding: 14px 75px;
   text-transform: uppercase;
   cursor: pointer;
   text-align: center;
-}
+  border-radius: 89%;
+  }
 
+  .restart-button {
+    margin: 0 auto;
+    color: #fff;
+    background: #b0b3c5;
+    width: 300px;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 14px 75px;
+    text-transform: uppercase;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 89%;
+    margin-top: 10px;
+    }
 .score {
-  background: #fff;
+  background: rgb(239, 212, 212);
   color: 000;
   font-size: 18px;
   width: 200px;
@@ -244,6 +142,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 50%;
 }
 
 .disabled-answer {
